--- a/src/app/components/calculadora-colas.component.html
+++ b/src/app/components/calculadora-colas.component.html
@@ -65,6 +65,7 @@
       [result]="result"
       [arrivalRate]="getCurrentArrivalRate()"
       [serviceRate]="getCurrentServiceRate()"
+      [serverRates]="getCurrentServerRates()"
       [systemCapacity]="getCurrentCapacity()"
     >
     </app-animacion>
